@@ -5,6 +5,7 @@ acct_mgr-0.5 (not yet released) - branch 0.11
  resolved issues
  * #10681: User with empty password can't reset their password
  * prevent two ways for a user to bypass a forced password change
+ * skip BotTrapCheck on admin user requests, i.e. from inside user admin panel
 
  new features
  * add unit tests for db access functions
